force-app/main/default/src/objects/SurveyInvitation/fields/Account_MVN__c.field-meta.xml
<CustomField>
    <fullName>Account_MVN__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Account record associated with Participant lookup. Used for Timeline View Configuration.</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Survey Invitations</relationshipLabel>
    <relationshipName>Survey_Invitations</relationshipName>
    <type>Lookup</type>
</CustomField>