force-app/main/default/src/objects/SurveyInvitation/fields/Care_Plan_MVN__c.field-meta.xml
<CustomField>
    <fullName>Care_Plan_MVN__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Care Plan</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Survey Invitations</relationshipLabel>
    <relationshipName>Survey_Invitations</relationshipName>
    <type>Lookup</type>
</CustomField>