force-app/main/default/src/objects/SurveyInvitation/fields/Care_Plan_Owner_Full_Name_MVN__c.field-meta.xml
<CustomField>
    <fullName>Care_Plan_Owner_Full_Name_MVN__c</fullName>
    <description>Care plan owner&apos;s first name and last name
Used for email alert merge fields</description>
    <formula>TRIM( Care_Plan_MVN__r.Owner:User.FirstName &amp; &quot; &quot; &amp; Care_Plan_MVN__r.Owner:User.LastName )</formula>
    <label>Care Plan Owner Full Name</label>
    <type>Text</type>
</CustomField>