force-app/main/default/src/objects/SurveyInvitation/fields/Contact_First_Name_MVN__c.field-meta.xml
<CustomField>
    <fullName>Contact_First_Name_MVN__c</fullName>
    <description>First Name of associated Contact_MVN__c.  Used for email template.</description>
    <formula>Contact_MVN__r.FirstName</formula>
    <label>Contact First Name</label>
    <type>Text</type>
</CustomField>