force-app/main/default/src/objects/SurveyInvitation/fields/Contact_MVN__c.field-meta.xml
<CustomField>
    <fullName>Contact_MVN__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Contact record associated with Participant lookup.  Used for email template.</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Survey Invitations</relationshipLabel>
    <relationshipName>Survey_Invitations</relationshipName>
    <type>Lookup</type>
</CustomField>