force-app/main/default/src/objects/SurveyInvitation/fields/Invitation_Link_MVN__c.field-meta.xml
<CustomField>
    <fullName>Invitation_Link_MVN__c</fullName>
    <description>Copy of the standard InvitationLink field.  Populated by Flow only under certain circumstances.  This field exists because email templates cannot reference the standard InvitationLink field.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Invitation Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>