force-app/main/default/src/objects/SurveyInvitation/fields/Response_Completion_Date_and_Time_MVN__c.field-meta.xml
<CustomField>
    <fullName>Response_Completion_Date_and_Time_MVN__c</fullName>
    <description>Copied from SurveyResponse object.  Populated by flow.  If multiple responses, will reflect the most recent.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Response Completion Date and Time</label>
    <type>DateTime</type>
</CustomField>